--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "kawankoding/laravel-fcm": "^0.2.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "miladrahimi/larajwt": "2.*"
