Modified Doctors and Delete Folder Node Modules

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="S.R. CITAS"
+APP_NAME="Sistema Citas"
 APP_ENV=local
 APP_KEY=base64:c/IR9XPWjFclBWeJhMZDpxk61S/NacACa9ANwkxL2Ak=
 APP_DEBUG=true
